# seizure-forecasting-eeg

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
app/: app.py
configs/: default.yaml  medium_run.yaml  small_run.yaml
docs/: ARCHITECTURE_TREE.txt  DATA_DOWNLOAD.md  EXPERIMENT_SUMMARY.md  IMPROVEMENTS.md  LABELING_SCHEMA.md  PERFORMANCE_RELIABILITY_REPORT.md  README.md  STATUS_AUDIT.md  seizure_forecasting_chat.md
docs/tables/: cache_report_full.txt  dataset_summary.txt  dataset_summary_full.txt  final_summary.txt
paper/: seizure_forecasting_paper.md
paper_pack/: 00_manifest.md  01_dataset_and_cache.md  02_methods_technical.md  03_results_master.md  04_figure_captions.md  05_reproducibility.md  06_limitations_and_interpretation.md  07_citation_pack.md  README_FOR_CHATGPT.md  references.bib
paper_pack/configs/: final_loso_config.yaml  final_run_config.yaml
paper_pack/tables/: alarm_ablation_summary.csv  cache_summary.csv  dataset_subject_summary.csv  loso_per_fold_results.csv  loso_summary_final.csv  performance_profiling_summary.csv  threshold_tradeoff_table.csv  within_subject_summary.csv
reports/tables/: alarm_ablation.csv  baseline_metrics.csv  channel_log.csv  loso_results.csv  perf_log_fold_chb01.csv  perf_log_fold_chb02.csv  perf_log_fold_chb03.csv  perf_log_fold_chb04.csv  perf_log_fold_chb05.csv  perf_log_fold_chb06.csv  perf_log_fold_chb07.csv  perf_log_fold_chb08.csv  perf_log_fold_chb09.csv  perf_log_fold_chb10.csv  perf_log_fold_chb11.csv  perf_log_fold_chb12.csv  perf_log_fold_chb13.csv  perf_log_fold_chb14.csv  perf_log_fold_chb15.csv  perf_log_fold_chb16.csv  perf_log_fold_chb17.csv  perf_log_fold_chb18.csv  perf_log_fold_chb19.csv  perf_log_fold_chb20.csv  perf_log_fold_chb21.csv  perf_log_fold_chb22.csv  perf_log_fold_chb23.csv  perf_log_fold_chb24.csv  summary_results.csv  window_counts.csv  window_counts_full.csv
scripts/: build_cache.py  cache_report.py  eval.py  full_eval.py  generate_summary.py  label_sanity.py  make_figures.py  run_ablations.py  run_experiments.py  run_loso.py  smoke_test.py  train_baseline.py  train_deep.py  verify_dataset.py
src/: __init__.py
src/chbmit/: __init__.py  indexing.py  parse_summary.py
src/features/: __init__.py  handcrafted.py
src/models/: __init__.py  (+2 more)
(+16 files in other folders)
